3-2-mtls-using-ingress-nginx/5.auth.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-foo-app
  namespace: default
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["ingress-nginx"]
